k8s/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: holiday
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: dashboard
          image: registry.gitlab.com/miulina-group/holiday_machine_project/dashboard:latest
          ports:
            - containerPort: 8050
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
  namespace: holiday
spec:
  selector:
    app: dashboard
  ports:
    - port: 8050
      targetPort: 8050
